# BGMRPCClientQml

./: .gitignore  .gitmodules  BGMRPC.pro  BGMRPCClientQml.pro  CMakeLists.txt  README.md  bgmrpcclientqml.cpp  bgmrpcclientqml.h  bgmrpccommonqml.h  calling.cpp  calling.h  qmldir
.openshift/action_hooks/: start  stop
BGMRPC/: BGMRPC.pro  bgmrpc.cpp  bgmrpc.h  client.cpp  client.h  main.cpp  objectctrl.cpp  objectctrl.h
BGMRPCClient/: BGMRPCClient.pro  BGMRPCClient_global.h  CMakeLists.txt  CallChain.cpp  CallChain.h  bgmrpcclient.cpp  bgmrpcclient.h
BGMRPCClientQml/: BGMRPC.qml  CMakeLists.txt  bgmrpcclientqml.cpp  bgmrpccommonqml.cpp
BGMRPCCommon/: BGMRPCCommon.pro  CMakeLists.txt  bgmrpccommon.cpp  bgmrpccommon.h  flags.h  intbytes.cpp  intbytes.h
BGMRPCConsole/: CMakeLists.txt
BGMRPCCtrl/: BGMRPCCtrl.pro  CMakeLists.txt  main.cpp
BGMRPCObjectInterface/: BGMRPCObjectInterface.pro  CMakeLists.txt  ObjectInterface_global.h  caller.cpp  caller.h  mthdAdaptIF.h  objctrlcmdcontroller.cpp  objctrlcmdcontroller.h  objectinterface.cpp  objectinterface.h
BGMRPCObjectLoader/: BGMRPCObjectLoader.pro  CMakeLists.txt  main.cpp
BGMRPCThreadObjectInterface/: BGMRPCThreadObjectInterface.pro  ThreadObjectInterface_global.h  threadobjectinterface.cpp  threadobjectinterface.h
BGMRPCd/: CMakeLists.txt  bgmrpc.cpp  bgmrpc.h  client.cpp  client.h  ctrlbase.cpp  ctrlbase.h  main.cpp  objectctrl.cpp  objectctrl.h  objectplug.cpp  objectplug.h  serverctrl.cpp  serverctrl.h
TestBGMRPC/: TestBGMRPC.pro  tst_clientcall.cpp
TestBGMRPCClientQml/: CMakeLists.txt
diy/BGMRPC/: BGMRPC.pro  base.pri  initialLib.sh  makepkg.sh
diy/BGMRPC/BGMRPCCommon/: BGMRPCCommon.pro  bgmrpccommon_global.h  bgmrpcsocketbuffer.cpp  bgmrpcsocketbuffer.h  parsejson.cpp  parsejson.h  socket.h
diy/BGMRPC/client/: client.pri  client.pro
diy/BGMRPC/client/BGCMS/: BGCMS.pro  bgcms.qrc  cmssettings.cpp  cmssettings.h  contentdialog.cpp  contentdialog.h  contentdialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  propertydialog.cpp  propertydialog.h  propertydialog.ui  resbrowerdialog.cpp  resbrowerdialog.h  resbrowerdialog.ui  resthumb.cpp  resthumb.h
diy/BGMRPC/client/BGMRCall/: BGMRCall.pro
diy/BGMRPC/client/BGMRFile/: BGMRFile.pro  main.cpp
diy/BGMRPC/client/BGMRPCClient/: BGMRPCClient.pro  bgmrpcclient.cpp  bgmrpcclient.h
diy/BGMRPC/client/BGMRPCInterface/: BGMRPCInterface.pro  bgmrpcinterface.cpp  bgmrpcinterface.h  bgmrpcinterface_global.h  datatype.h
diy/BGMRPC/client/BGMRPClientQuick/: BGMRPClientQuick.pro  bgmrpc.cpp  bgmrpc.h  bgmrpcc.cpp  bgmrpcc.h  clifile.cpp  clifile.h  clifiles.cpp  clifiles.h  main.cpp  proc.cpp  proc.h  step.cpp  step.h
diy/BGMRPC/client/clientDemo/: main.cpp
diy/BGMRPC/client/testBGClient/: main.cpp  testBGClient.pro
diy/BGMRPC/server/: plugin.pri  server.pri  server.pro
diy/BGMRPC/server/BGMRPC/: BGMRPC.pro  bgmradaptor.h  bgmrclient.cpp  bgmrclient.h  bgmrobject.cpp  bgmrobject.h  bgmrobjectstorage.cpp  bgmrobjectstorage.h  bgmrpc.cpp  bgmrpc.h  bgmrpc_global.h  bgmrprocedure.cpp  bgmrprocedure.h  bgmrtcpserver.cpp  bgmrtcpserver.h  relatedclient.cpp  relatedclient.h  relatedproc.cpp  relatedproc.h
diy/BGMRPC/server/BGMRServer/: BGMRServer.pro  main.cpp
diy/BGMRPC/server/BGResourcePlugin/: BGResourcePlugin.pro  update-dependencies.sh
diy/BGMRPC/server/JsPlugin2/: JsPlugin2.pro  jsengine.cpp  jsengine.h  jsobjs.cpp  jsobjs.h  jsplugin2_global.h
diy/BGMRPC/server/RPCCtrlPlugin/: RPCCtrlPlugin.pro  rpcctrlplugin.cpp  rpcctrlplugin.h  rpcctrlplugin_global.h
diy/BGMRPC/server/RPCFilePlugin/: RPCFilePlugin.pro  filestream.cpp  filestream.h  rpcfileplugin.cpp  rpcfileplugin.h  rpcfileplugin_global.h
diy/BGMRPC/server/chatPlugin/: chatPlugin.pro  chatplugin.cpp  chatplugin.h
diy/BGMRPC/server/jsPlugin/: jsPlugin.pro  jsglobalobject.h  jsmetatype.cpp  jsmetatype.h  jsmetatypecommon.h  jsobjectclass.cpp  jsobjectclass.h  jsobjectprototype.cpp  jsobjectprototype.h  jsplugin.cpp  jsplugin.h  jsplugin_global.h
diy/BGMRPC/server/mathPlus/: mathPlus.pro  mathplus.cpp  mathplus.h  mathplus_global.h
diy/WEB/: article.html  category.html  index.html  testRPC.html
diy/WEB/cms/: manager.html
diy/WEB/cms/css/: cms.css  contentManager.css
diy/WEB/cms/js/: cmsClient.js  (+1 more)
diy/WEB/css/: article.css  category.css  chatDemo.css  home.css  main.css  mainContent-article.css  mainContent.css
diy/WEB/js/: BGMRPC.js  flow.js
diy/dev/BGMRPC/: BGMRPC.pro  base.pri
interfaces/: CMakeLists.txt
interfaces/BGCMS/: BGCMS_global.h  CMakeLists.txt  bgcms.cpp  bgcms.h
interfaces/DoodleStorage/: DoodleStorage.pro  doodlestorage.cpp  doodlestorage.h
interfaces/Graphviz/: CMakeLists.txt  Graphviz_global.h  graphviz.cpp  graphviz.h
interfaces/JsPlugin2/: CMakeLists.txt  JsPlugin2.pro  JsPlugin2_global.h  jsengine.cpp  jsengine.h  jsobjs.cpp  jsobjs.h
interfaces/JsPlugin2/JsModule/FirstModule/: firstmodule.h
interfaces/JsPlugin2/JsModule/JsModuleCommon/: JsModuleCommon.pro  jsobjfactory.h
interfaces/JsPlugin2/JsModule/jsDB/: jsdb.cpp  jsdb.h
interfaces/JsPlugin2/JsModule/jsTimer/: jsTimer.pro  jstimer.cpp  jstimer.h
interfaces/JsPlugin2/JsModules/: CMakeLists.txt
interfaces/JsPlugin2/JsModules/JsModuleCommon/: CMakeLists.txt  jsobjfactory.cpp  jsobjfactory.h
interfaces/JsPlugin2/JsModules/jsByteArray/: CMakeLists.txt  jsByteArray_global.h  jsbytearray.cpp  jsbytearray.h
interfaces/JsPlugin2/JsModules/jsDB/: CMakeLists.txt  jsdb.cpp  jsdb.h  jsdb_global.h
interfaces/JsPlugin2/JsModules/jsFile/: CMakeLists.txt  jsFile_global.h  jsfile.cpp  jsfile.h
interfaces/JsPlugin2/JsModules/jsTimer/: CMakeLists.txt  jstimer.cpp  jstimer.h  jstimer_global.h
interfaces/MissingObjectHandler/: CMakeLists.txt  MissingObjectHandler_global.h  missingobjecthandler.cpp  missingobjecthandler.h
interfaces/PythonInterface/: CMakeLists.txt  PythonInterface.pro  PythonInterface_global.h  pyobj.cpp  pyobj.h  pythoninterface.cpp  pythoninterface.h
interfaces/math/: math.cpp  math.h  math.pro
(+104 files in other folders)
